--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section class="order">
         <h2 class="section-title">Choose your course</h2>
-        <p>Whether you're a complete beginner or a long-term aficianado, we have got you covered</p>
+        <p>Whether you're a complete beginner or a veteran aficianado, we have got you covered</p>
         <div class="btn-group">
             <a href="#" class="btn btn-primary">Painting with colors</a>
             <a href="#" class="btn btn-primary">Analogue vs Digital</a>
