--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     <section class="intro">
         <h2 class="section-title">Discover the artist within you</h2>
-        <h3>First <span>online</span> arts school in the world</h3>
+        <h3>First <span>online</span> art school in the world</h3>
     </section>
     
     <section class="about">
